--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Bobtown, CA 99999, <br>
         USA <br>
         Tel: 123-456-7890 <br>
-        Email: no_reply@example.com <br>
+       <strong>Email</strong>: no_reply@example.com <br>
         
         20 January 2016 <br>
     </address>
@@ -39,44 +39,45 @@ Thank you for your recent application to join us at the University of Awesome's 
 </p>
 <h2>Starting dates</h2>
 
-We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:
+<p>We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:</p>
 
-First semester: 9 September 2016
-Second semester: 15 January 2017
-Third semester: 2 May 2017
-
-Please let me know if this is ok, and if so which start date you would prefer.
-
-You can find more information about important university dates on our website.
+<li>First semester: 9 September 2016</li>
+<li>Second semester: 15 January 2017</li>
+<li>Third semester: 2 May 2017</li>
 
 
-Subjects of study
+<p>Please let me know if this is ok, and if so which start date you would prefer</p>.
 
-At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:
-
-Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)
-Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)
-HTML and CSS constructs for representing musical scores.
-
-So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
+<p>You can find more information about <a href="https//univelcity.com">important university dates</a> on our website.</p>
 
 
-Exotic dance moves
+<h3>Subjects of study</h3>
 
-Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:
+<p>At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
 
-Polynesian chicken dance
-A little known but very influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".
-Icelandic brownian shuffle
-Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.
-Arctic robot dance
-An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.
+<li>Turning H <sub>2</sub> O into wine, and the health benefits of Resveratrol (C <sub>14</sub>H <sub>12</sub>O <sub>3</sub>.)</li>
+<li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)</li>
+<li><abbr title="hypertext markup language"></abbr>HTML and <abbr title="cascading style sheet"></abbr> CSS constructs for representing musical scores.</li>
 
-For more of my research, see my exotic dance research page.
+<p>So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.</p>
 
-Yours sincerely,
-Dr Eleanor Gaye
 
-University of Awesome motto: "Be awesome to each other." -- The memoirs of Bill S Preston, Esq
+<h4>Exotic dance moves</h4>
+
+<p>Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:</p>
+
+<dt>Polynesian chicken dance</dt>
+<dd>A little known but very influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
+<dt>Icelandic brownian shuffle</dt>
+<dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dd>
+<dt>Arctic robot dance</dt>
+<dd>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
+
+<p>For more of my research, see my <a href="">exotic dance research page</a>.</p>
+
+<P>Yours sincerely,</P>
+<P>Dr Eleanor Gaye</P>
+
+<P>University of Awesome motto: "Be awesome to each other." -- <address> The memoirs of Bill S Preston, Esq</address></P>
 </body>
 </html>
