--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         University of Awesome <br>
         Bobtown, CA 99999, <br>
         USA <br>
-        Tel: 123-456-7890 <br>
+        <strong>Tel</strong>: 123-456-7890 <br>
        <strong>Email</strong>: no_reply@example.com <br>
         
        
@@ -69,7 +69,7 @@ Thank you for your recent application to join us at the University of Awesome's 
 <p>Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:</p>
 <dl>
 <dt>Polynesian chicken dance</dt>
-<dd>A little known but very influential dance dating back as far as <abbr title="BEFORE CHRIST">300BC</abbr>, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
+<dd>A little known but very influential dance dating back as far as 300<abbr title="BEFORE CHRIST">BC</abbr>, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
 <dt>Icelandic brownian shuffle</dt>
 <dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dd>
 <dt>Arctic robot dance</dt>
