--- a/countries/index.html
+++ b/countries/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>countries flag</title>
     <link rel="stylesheet" href="./count.css">
+    <link rel="stylesheet" href="./media/chika logo.png">
 </head>
 <body>
     <section></section>
