--- a/countries/index.html
+++ b/countries/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>countries flag</title>
     <link rel="stylesheet" href="./count.css">
-    <link rel="favicon_io" href="./media/favicon_io/chika.ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./media/favicon_io/chika.ico.ico" type="image/x-icon">
 </head>
 <body>
     <section></section>
