feat: assignment done on forms

--- a/countries/fonts.html
+++ b/countries/fonts.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>typography</title>
-    <style>
-        p{
-
-        }
-    </style>
+    <title>Dr bills website</title>
 </head>
 <body>
-    nav>ul>li#num>(part$)*7
+    <h2> Don't have the knowledge to trade</h2>
+    <h1>Let Our Robot Trade For You</h1>
+    <p>all you have to do is to connect your account on </p>
 </body>
 </html>
