--- a/designs/coder.html
+++ b/designs/coder.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="design.css">
-    <link rel="stylesheet" href="./CLASS-PIZZAS/card/favicon.ico">
+    <link rel="stylesheet" href="./media/favicon_io/chika.ico.ico">
 </head>
 <body>
     <section><br><br>
