--- a/designs/coder.html
+++ b/designs/coder.html
@@ -15,7 +15,8 @@
     </section>
 
     <section>
-        <div><br><br><br><br><br><br><br><br><br><br>
+        <div><br><br><br>
+            <img src="./chika image.jpg" alt="chikafx" width="150" height="200">
             <h1>Obi Kamso Kings</h1>
         <h2>Lagos, Nigeria</h2>
         <h2>"Front-end developer and avid reader."</h2>
